--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 QBE - Backend Compiler              http://c9x.me/compile/
 
+QBE is, and will remain, a small project (less than 8 kloc). It is programmed in non-fancy C99 without any dependencies.
+
 doc/    Documentation.
 minic/  An example C frontend for QBE.
 tools/  Miscellaneous tools (testing).
